--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>California State Roleplay</title>
-    <meta content="Welcome to CASRP Known as California State Roleplay! We are a server based on roleplaying and providing the best roleplaying experience for all! We hope you enjoy." name="description">
+    <meta
+        content="Welcome to CASRP Known as California State Roleplay! We are a server based on roleplaying and providing the best roleplaying experience for all! We hope you enjoy."
+        name="description">
     <meta content="" name="keywords">
     <meta property="theme-color" content="#4071A8">
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/950119396607668234/992238316646838344/b9ETi-OV.png?size=4096" />
+    <meta property="og:image"
+        content="https://cdn.discordapp.com/attachments/950119396607668234/992238316646838344/b9ETi-OV.png?size=4096" />
     <link href="./assets/img/hero-img.png" rel="icon">
     <link href="./assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
@@ -44,8 +47,8 @@
                     <li class="dropdown"><a><span>Nagivation</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
                             <li><a class="nav-link scrollto active" href="#hero">Information</a></li>
-                            <li><a class="nav-link scrollto" href="https://discord.gg/casrp"
-                                    target="_blank">Discord</a></li>
+                            <li><a class="nav-link scrollto" href="https://discord.gg/casrp" target="_blank">Discord</a>
+                            </li>
                             <li><a class="nav-link scrollto" href="#about">About</a></li>
                             <li><a class="nav-link scrollto" href="#team">Team</a></li>
                             <li><a class="nav-link scrollto" href="#faq">F.A.Q</a></li>
@@ -249,16 +252,20 @@
                 <div class="section-title" dfata-aos="fade-up">
                     <h2></h2>
                     <p><i class="bi bi-discord"></i> Our Discord Server</p>
-                    <span><i style="padding-left: 10px;">If you need support or have any questions, we're always here to help, we are constantly growing our community and love to help you!<br></i></span>
+                    <span><i style="padding-left: 10px;">If you need support or have any questions, we're always here to
+                            help, we are constantly growing our community and love to help you!<br></i></span>
                     <br><br>
-                    <iframe src="https://discord.com/widget?id=924038453568602162&theme=dark" width="1100" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                    <iframe src="https://discord.com/widget?id=924038453568602162&theme=dark" width="1100" height="500"
+                        allowtransparency="true" frameborder="0"
+                        sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
                     <br><br>
-                    <button type="green" onclick="window.open('https://discord.gg/casrp', '_blank')" style="margin-left:38%;zoom:1.5"><i class="bi bi-discord"></i> <b>Join Now</b></button>
-                  </div>
+                    <button type="green" onclick="window.open('https://discord.gg/casrp', '_blank')"
+                        style="margin-left:38%;zoom:1.5"><i class="bi bi-discord"></i> <b>Join Now</b></button>
+                </div>
             </div>
         </section>
 
-        <section id="team"class="team">
+        <section id="team" class="team">
             <div class="container">
                 <div class="section-title" data-aos="fade-up">
                     <h2>CASRP Team</h2>
@@ -268,7 +275,8 @@
                 <div class="row" data-aos="fade-left">
                     <div class="col-lg-3 cold-md-6">
                         <div class="member" data-aos="zoom-in" data-aos-delay="100">
-                            <div class="pic"><img src="./assets/img/team/team-1.gif" class="img-fluid" alt="" style="width: 100%"></div>
+                            <div class="pic"><img src="./assets/img/team/team-1.gif" class="img-fluid" alt=""
+                                    style="width: 100%"></div>
                             <div class="member-info">
                                 <h4>OpticalDrop#4809</h4>
                                 <span>Director</span>
@@ -276,36 +284,144 @@
                         </div>
                     </div>
 
-                <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
-                    <div class="member" data-aos="zoom-in" data-aos-delay="300">
-                        <div class="pic"><img src="./assets/img/team/team-2.png" class="img-fluid" alt="" style="width: 100%"></div>
-                        <div class="member-info">
-                            <h4>Humvee#7461</h4>
-                            <span>Deputy Director</span>
+                    <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
+                        <div class="member" data-aos="zoom-in" data-aos-delay="300">
+                            <div class="pic"><img src="./assets/img/team/team-2.png" class="img-fluid" alt=""
+                                    style="width: 100%"></div>
+                            <div class="member-info">
+                                <h4>Humvee#7461</h4>
+                                <span>Deputy Director</span>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
-                    <div class="member" data-aos="zoom-in" data-aos-delay="400">
-                        <div class="pic"><img src="./assets/img/team/team-3.png" class="img-fluid" alt="" style="width: 100%"></div>
-                        <div class="member-info">
-                            <h4>Hi801#4955</h4>
-                            <span>Assistant Director</span>
+                    <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
+                        <div class="member" data-aos="zoom-in" data-aos-delay="400">
+                            <div class="pic"><img src="./assets/img/team/team-3.png" class="img-fluid" alt=""
+                                    style="width: 100%"></div>
+                            <div class="member-info">
+                                <h4>Hi801#4955</h4>
+                                <span>Assistant Director</span>
+                            </div>
                         </div>
                     </div>
-            </div>
 
-            <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
-                <div class="member" data-aos="zoom-in" data-aos-delay="300">
-                    <div class="pic"><img src="./assets/img/team/team-4.png" class="img-fluid" alt="" style="width: 100%"></div>
-                    <div class="member-info">
-                        <h4>Elon#3011</h4>
-                        <span>Developer</span>
+                    <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
+                        <div class="member" data-aos="zoom-in" data-aos-delay="300">
+                            <div class="pic"><img src="./assets/img/team/team-4.png" class="img-fluid" alt=""
+                                    style="width: 100%"></div>
+                            <div class="member-info">
+                                <h4>Elon#3011</h4>
+                                <span>Developer</span>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
         </section>
+
+
+        <section id="faq" class="faq section-bg">
+            <div class="container">
+
+                <div class="section-title" data-aos="fade-up">
+                    <h2>F.A.Q</h2>
+                    <p>Frequently Asked Questions</p>
+                </div>
+
+                <div class="faq-list">
+                    <ul>
+
+                        <!-- FAQ QUESTION 1 -->
+                        <li data-aos="fade-up">
+                            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse"
+                                data-bs-target="#faq-list-1">
+                                Can we partner?
+                                <i class="bx bx-chevron-down icon-show"></i><i
+                                    class="bx bx-chevron-up icon-close"></i></a>
+                            <div id="faq-list-1" class="collapse" data-bs-parent=".faq-list">
+                                <p class="description">We normally will pick specific servers deemed worthy of a partnership with us.But, if you would like you could purchase a paid ad in <a href="https://discord.com/channels/924038453568602162/1011465328783528017">「🛒」store.</a></p>
+                            </div>
+                        </li>
+
+                        <!-- FAQ QUESTION 2 -->
+                        <li data-aos="fade-up">
+                            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse"
+                                data-bs-target="#faq-list-2">
+                                How do I become a moderator?
+                                <i class="bx bx-chevron-down icon-show"></i><i
+                                    class="bx bx-chevron-up icon-close"></i></a>
+                            <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
+                                <p class="description">You can become a moderator once staff applications are open and released to the public, normally you will be able to find them in <a href="https://discord.com/channels/924038453568602162/1011465322383028305" target="_blank">「📖」information.</a></p>
+                            </div>
+                        </li>
+
+                        <!-- FAQ QUESTION 3 -->
+                        <li data-aos="fade-up">
+                            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse"
+                                data-bs-target="#faq-list-3">
+                                Do I have to apply for a departments such as Fire/Police/Sheriff/EMS/etc?
+                                <i class="bx bx-chevron-down icon-show"></i><i
+                                    class="bx bx-chevron-up icon-close"></i></a>
+                            <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
+                                <p class="description">No, you are not required to unless you want to be apart of a sub-division such as SWAT, FBI, etc.</p>
+                            </div>
+                        </li>
+
+                        <li data-aos="fade-up">
+                            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse"
+                                data-bs-target="#faq-list-4">
+                                Is this server VC only?
+                                <i class="bx bx-chevron-down icon-show"></i><i
+                                    class="bx bx-chevron-up icon-close"></i></a>
+                            <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
+                                <p class="description">Not at the moment. The server is not a VC only server at this time, but is subject to change in the future. If you are interested in a VC only roleplay join our whitelisted server!</p>
+                            </div>
+                        </li>
+
+                        <li data-aos="fade-up">
+                            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse"
+                                data-bs-target="#faq-list-5">
+                                Where do I report a staff member?
+                                <i class="bx bx-chevron-down icon-show"></i><i
+                                    class="bx bx-chevron-up icon-close"></i></a>
+                            <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
+                                <p class="description">To report a staff member you must head over to our support server and information channel, click appeal hub then click on staff report form.</p>
+                            </div>
+                        </li>
+
+                        <li data-aos="fade-up">
+                            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse"
+                                data-bs-target="#faq-list-6">
+                                When will my application be read?
+                                <i class="bx bx-chevron-down icon-show"></i><i
+                                    class="bx bx-chevron-up icon-close"></i></a>
+                            <div id="faq-list-6" class="collapse" data-bs-parent=".faq-list">
+                                <p class="description">Applications will be read on Fridays - Sundays when staff have the availability to read applications. Asking for applications to be read will result in a immediate denial of your application.</p>
+                            </div>
+                        </li>
+
+                        <li data-aos="fade-up">
+                            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse"
+                                data-bs-target="#faq-list-7">
+                                How do I join the server?
+                                <i class="bx bx-chevron-down icon-show"></i><i
+                                    class="bx bx-chevron-up icon-close"></i></a>
+                            <div id="faq-list-7" class="collapse" data-bs-parent=".faq-list">
+                                <p class="description">To join the server head over to ER:LC. Once you have loaded in go to Menu > Join by code > Enter: CasRP > Then your done!</p>
+                            </div>
+                        </li>
+
+                        <li data-aos="fade-up">
+                            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse"
+                                data-bs-target="#faq-list-8">
+                                When will the server go up?
+                                <i class="bx bx-chevron-down icon-show"></i><i
+                                    class="bx bx-chevron-up icon-close"></i></a>
+                            <div id="faq-list-8" class="collapse" data-bs-parent=".faq-list">
+                                <p class="description">The server will go up around 12pm. We will normally host 2-3 times a day.</p>
+                            </div>
+                        </li>
+                </div>
+        </section><!-- End F.A.Q Section -->
     </main>
 
     <footer id="footer">
@@ -314,10 +430,13 @@
                 <div class="row">
                     <div class="col-lg-5 col-md-6">
                         <div class="footer-info">
-                            <h3><img src="./assets/img/hero-img.png" style="height: 35px"> California State Roleplay</h3>
-                            <p class="pb-3"><em>"A whole different experience."<br>- Join The Best Roleplay Server</em></br></p>
+                            <h3><img src="./assets/img/hero-img.png" style="height: 35px"> California State Roleplay
+                            </h3>
+                            <p class="pb-3"><em>"A whole different experience."<br>- Join The Best Roleplay
+                                    Server</em></br></p>
                             <p>
-                                <button type="blue2" onclick="window.open('https://discord.gg/casrp', '_blank')"><i class="bi bi-discord"></i> Discord</button>
+                                <button type="blue2" onclick="window.open('https://discord.gg/casrp', '_blank')"><i
+                                        class="bi bi-discord"></i> Discord</button>
                             </p>
                         </div>
                     </div>
@@ -325,10 +444,16 @@
                     <div class="col-md-6 footer-links">
                         <h4>Useful Links</h4>
                         <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="https://discord.com/terms" target="_blank">Discord Terms of Service</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="https://discord.com/guidelines" target="_blank">Discord Community Guidelines</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="https://www.roblox.com/groups/12462905/CASRP-California-State-Roleplay#!/about" target="_blank">Roblox Group</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="https://docs.google.com/forms/d/e/1FAIpQLScvQiLrN3AjgvLRT2-0Xs9G-kfdInm3R0eQ8lHLbOgfil0dOA/viewform" target="_blank">Staff Applications</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="https://discord.com/terms"
+                                    target="_blank">Discord Terms of Service</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="https://discord.com/guidelines"
+                                    target="_blank">Discord Community Guidelines</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a
+                                    href="https://www.roblox.com/groups/12462905/CASRP-California-State-Roleplay#!/about"
+                                    target="_blank">Roblox Group</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a
+                                    href="https://docs.google.com/forms/d/e/1FAIpQLScvQiLrN3AjgvLRT2-0Xs9G-kfdInm3R0eQ8lHLbOgfil0dOA/viewform"
+                                    target="_blank">Staff Applications</a></li>
                         </ul>
                     </div>
                 </div>
