--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         name="description">
     <meta content="" name="keywords">
     <meta property="theme-color" content="#4071A8">
-    <meta property="og:image"
-        content="https://cdn.discordapp.com/attachments/950119396607668234/992238316646838344/b9ETi-OV.png?size=4096" />
+    <meta property="og:image" content="https://cdn.discordapp.com/icons/924038453568602162/67fc3fc590d4d6b9853710c387a39ea1.png?" />
     <link href="./assets/img/hero-img.png" rel="icon">
     <link href="./assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
