--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li class="dropdown"><a><span>Nagivation</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
                             <li><a class="nav-link scrollto active" href="#hero">Information</a></li>
-                            <li><a class="nav-link scrollto" href="https://discord.gg/casrp" target="_blank">Discord</a>
+                            <li><a class="nav-link scrollto" href="https://discord.gg/california" target="_blank">Discord</a>
                             </li>
                             <li><a class="nav-link scrollto" href="#about">About</a></li>
                             <li><a class="nav-link scrollto" href="#team">Team</a></li>
@@ -69,7 +69,7 @@
                                     target="_blank">Appeal Forms</a></li>
                         </ul>
                     </li>
-                    <button type="blue2" onclick="window.open('https://discord.gg/casrp', '_blank')">Join
+                    <button type="blue2" onclick="window.open('https://discord.gg/california', '_blank')">Join
                         Now</button>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -87,7 +87,7 @@
                             and providing the best roleplaying experience for all! We hope you enjoy.</h2>
                         <div class="text-center text-lg-start">
                             <a href="#about" class="btn-get-started scrollto">Get Started</a>
-                            <button type="blue" onclick="window.open('https://discord.gg/casrp', '_blank')"><i
+                            <button type="blue" onclick="window.open('https://discord.gg/california', '_blank')"><i
                                     class="bi bi-discord"></i> Discord</button>
                         </div>
                     </div>
@@ -258,7 +258,7 @@
                         allowtransparency="true" frameborder="0"
                         sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
                     <br><br>
-                    <button type="green" onclick="window.open('https://discord.gg/casrp', '_blank')"
+                    <button type="green" onclick="window.open('https://discord.gg/california', '_blank')"
                         style="margin-left:38%;zoom:1.5"><i class="bi bi-discord"></i> <b>Join Now</b></button>
                 </div>
             </div>
@@ -434,7 +434,7 @@
                             <p class="pb-3"><em>"A whole different experience."<br>- Join The Best Roleplay
                                     Server</em></br></p>
                             <p>
-                                <button type="blue2" onclick="window.open('https://discord.gg/casrp', '_blank')"><i
+                                <button type="blue2" onclick="window.open('https://discord.gg/california', '_blank')"><i
                                         class="bi bi-discord"></i> Discord</button>
                             </p>
                         </div>
